added home assets

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,172 @@
-<p>home works!</p>
+<nav class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
+    <div class="container">
+  
+      <!-- Brand -->
+      <a class="navbar-brand" routerLink="/#welcome" routerLinkActive="active">
+        <img class="logo-icon" src="../../../assets/logo.png" height="48px" >
+      </a>
+  
+      <!-- Toggler -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarLandingCollapse" aria-controls="navbarLandingCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <!-- Collapse -->
+      <div class="collapse navbar-collapse" id="navbarLandingCollapse">
+  
+        <!-- Nav -->
+        <ul class="navbar-nav ml-xl-auto">
+          
+  
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/earnings" routerLinkActive="active">Earnings</a>
+          </li>
+          
+          
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/account" routerLinkActive="active">Account</a>
+          </li>
+        </ul>
+  
+  
+      </div>
+  
+    </div>
+  </nav>
+
+  <div class="py-12 bg-light" id="services">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+
+          <!-- Preheading -->
+          <!-- <h6 class="heading-xxs mb-3 text-gray-400">
+            Services
+          </h6> -->
+
+          <!-- Heading -->
+          <h2 class="mb-10">Welcome Back <br> Mr. Tshilimandila</h2>
+          <h2 class="mb-10"></h2>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-3">
+  
+            <!-- Card -->
+            <div class="card mb-7 mb-md-0 shadow">
+    
+              <!-- Image -->
+              
+              
+              <div class="card-body card-avail text-center">
+                <img src="../../../assets/images/avail.png" height="150px" alt="..." class="card-img-top">
+    
+                <strong class="card-text">Update Availability</strong>
+              </div>
+    
+            </div>
+    
+          </div>
+          <div class="col-12 col-md-3">
+    
+            <!-- Card -->
+            <div class="card mb-7 mb-md-0 shadow">
+    
+              <!-- Image -->
+                <!-- Body -->
+                
+              <div class="card-body card-find text-center">
+                <img src="../../../assets/images/patient.png" width="100px" height="150px"  alt="..."  class="card-img-top">
+    
+                <strong class="card-text">Find Patients</strong>
+              </div>
+    
+            </div>
+    
+          </div>
+      </div>
+
+      <!-- assigned patients -->
+
+      <div class="row">
+        <div class="col-12">
+
+          <!-- Preheading -->
+          <!-- <h6 class="heading-xxs mb-3 text-gray-400">
+            Services
+          </h6> -->
+          <br><br>
+          <!-- Heading -->
+          <h3>Assigned Patients</h3>
+          <p>Patient assigned or picked by you.</p>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-3">
+  
+            <!-- Card -->
+          <div class="card mb-7 mb-md-0 shadow">
+  
+            <!-- Image -->
+            
+            <!-- Body -->
+            <div class="card-body text-center">
+                <h1>09:00</h1>
+              <strong>John Doe</strong>
+              <p>Sunnyside, 104 celliers. </p>
+            </div>
+  
+          </div>
+    
+          </div>
+          <div class="col-12 col-md-3">
+    
+            <!-- Card -->
+            <div class="card mb-7 mb-md-0 shadow">
+    
+                <div class="card-body text-center">
+                    <h1>11:00</h1>
+                  <strong>John Doe</strong>
+                  <p>Sunnyside, 104 celliers. </p>
+                </div>
+    
+            </div>
+    
+          </div>
+          <div class="col-12 col-md-3">
+    
+            <!-- Card -->
+            <div class="card mb-7 mb-md-0 shadow">
+    
+                <div class="card-body text-center">
+                    <h1>14:00</h1>
+                  <strong>Not John Doe</strong>
+                  <p>Sunnyside, 104 celliers. </p>
+                </div>
+    
+            </div>
+    
+          </div>
+          <div class="col-12 col-md-3">
+    
+            <!-- Card -->
+            <div class="card mb-7 mb-md-0 shadow">
+    
+                <div class="card-body text-center">
+                    <h1>15:00</h1>
+                  <strong>Jane Doe</strong>
+                  <p>Sunnyside, 104 celliers. </p>
+                </div>
+    
+            </div>
+    
+          </div>
+      </div>
+    </div>
+</div>
